--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta property="og:title" content="MENGEJUTKAN!">
 <meta property="og:description" content="zakar saya bertambah dari 11 hingga 15 sentimeter">
-<meta property="og:image" content="https://i.imgur.com/ngr2ibk.png">
+<meta property="og:image" content="https://i.imgur.com/BPaf71q.png">
   <title>New Promotion</title>
   <meta name="description" content="Promo">
   <meta name="keywords" content="Beauty">
